start work on PC

--- a/main-fitness/src/main/resources/application-local.properties
+++ b/main-fitness/src/main/resources/application-local.properties
@@ -35,7 +35,7 @@ app.userBlockCount=3
 # Logging ->> DEBUG OFF TRACE INFO WARN ERROR
 log.value=INFO
 logging.level.root=${log.value}
-logging.level.com.epam.upskill.authenticationservice=${log.value}
+logging.level.com.epam.upskill.springcore=${log.value}
 logging.level.ROOT=${log.value}
 logging.level.org.springframework.orm.jpa=${log.value}
 logging.level.org.springframework.transaction=${log.value}
