--- a/workload/src/main/resources/application.properties
+++ b/workload/src/main/resources/application.properties
@@ -1,8 +1,43 @@
-spring.profiles.active=local
+server.port=5555
+
+# Datasource
+spring.datasource.url=jdbc:postgresql://localhost:5432/workload
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.username=postgres
+spring.datasource.password=password
+
+# JPA properties
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
+
+# all api starts by /workload
+server.servlet.context-path=/workload
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
+
+# Logging ->> DEBUG OFF TRACE INFO WARN ERROR
+log.value=INFO
+logging.level.root=${log.value}
+logging.level.com.epam.upskill.workload=${log.value}
+logging.level.ROOT=${log.value}
+logging.level.org.springframework.orm.jpa=${log.value}
+logging.level.org.springframework.transaction=${log.value}
+logging.level.org.hibernate.engine.transaction.internal.TransactionImpl=${log.value}
+logging.level.org.springframework.web.bind.annotation.RequestMapping=${log.value}
+logging.level.org.springframework.transaction.interceptor = ${log.value}
+logging.level.io.swagger.models.parameters.AbstractSerializableParameter=${log.value}
+
 spring.application.name=workload
 spring.zipkin.base-url=http://localhost:9411
-spring.rabbitmq.addresses=localhost:5672
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 eureka.client.enabled=true
+
+
+
+
+
+
