--- a/feign-clients/pom.xml
+++ b/feign-clients/pom.xml
@@ -7,13 +7,13 @@
         <groupId>com.qudratjoncode</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <dependencies>
-        <dependency>
-            <groupId>jakarta.validation</groupId>
-            <artifactId>jakarta.validation-api</artifactId>
-            <version>2.0.2</version>
-        </dependency>
-    </dependencies>
+<!--    <dependencies>-->
+<!--        <dependency>-->
+<!--            <groupId>jakarta.validation</groupId>-->
+<!--            <artifactId>jakarta.validation-api</artifactId>-->
+<!--            <version>2.0.2</version>-->
+<!--        </dependency>-->
+<!--    </dependencies>-->
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
     <artifactId>feign-clients</artifactId>
