--- a/main-fitness/src/main/resources/application-docker.properties
+++ b/main-fitness/src/main/resources/application-docker.properties
@@ -1,40 +1,27 @@
 server.port=1111
 
 # Datasource
-spring.datasource.url=jdbc:postgresql://localhost:5432/gym
+spring.datasource.url=jdbc:postgresql://postgres:5433/gym
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.username=postgres
+spring.datasource.username=qudratjonkomilov
 spring.datasource.password=password
-
-# Enabling H2 Console for dev purposes
-spring.h2.console.enabled=true
 
 # JPA properties
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.open-in-view=false
 
-# all api starts by /api
-server.servlet.context-path=/api
+# all api starts by /fitness
+server.servlet.context-path=/fitness
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
-management.endpoints.web.exposure.include=health,info,prometheus
 
-# JWT properties
-# secret key
-app.jwtSecret=demoSecretKey-123456789-KOINOT-123456789
-# 20 days
-app.jwtExpirationInMs=1728000000
-# 100 days
-app.jwtExpirationInMsForRefreshToken=8640000000
+
 
 # user block time
 app.userBlockTimeInMs=600000
 # user block count
 app.userBlockCount=3
-
-
-
 # Logging ->> DEBUG OFF TRACE INFO WARN ERROR
 log.value=INFO
 logging.level.root=${log.value}
@@ -46,3 +33,10 @@ logging.level.org.hibernate.engine.transaction.internal.TransactionImpl=${log.va
 logging.level.org.springframework.web.bind.annotation.RequestMapping=${log.value}
 logging.level.org.springframework.transaction.interceptor = ${log.value}
 logging.level.io.swagger.models.parameters.AbstractSerializableParameter=${log.value}
+
+spring.application.name=fitness
+spring.zipkin.base-url=http://zipkin:9411
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.client.enabled=true
