--- a/main-fitness/src/main/resources/application.properties
+++ b/main-fitness/src/main/resources/application.properties
@@ -1,4 +1,38 @@
-spring.profiles.active=local
+server.port=1111
+
+# Datasource
+spring.datasource.url=jdbc:postgresql://localhost:5432/gym
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.username=postgres
+spring.datasource.password=password
+
+# JPA properties
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.open-in-view=false
+
+# all api starts by /fitness
+server.servlet.context-path=/fitness
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
+
+
+# user block time
+app.userBlockTimeInMs=600000
+# user block count
+app.userBlockCount=3
+# Logging ->> DEBUG OFF TRACE INFO WARN ERROR
+log.value=INFO
+logging.level.root=${log.value}
+logging.level.com.epam.upskill.springcore=${log.value}
+logging.level.ROOT=${log.value}
+logging.level.org.springframework.orm.jpa=${log.value}
+logging.level.org.springframework.transaction=${log.value}
+logging.level.org.hibernate.engine.transaction.internal.TransactionImpl=${log.value}
+logging.level.org.springframework.web.bind.annotation.RequestMapping=${log.value}
+logging.level.org.springframework.transaction.interceptor = ${log.value}
+logging.level.io.swagger.models.parameters.AbstractSerializableParameter=${log.value}
 
 spring.application.name=fitness
 spring.zipkin.base-url=http://localhost:9411
@@ -7,3 +41,9 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 eureka.client.enabled=true
+
+
+
+
+
+
