--- a/workload/src/main/resources/application-docker.properties
+++ b/workload/src/main/resources/application-docker.properties
@@ -1,41 +1,26 @@
-server.port=1111
+server.port=5555
 
 # Datasource
-spring.datasource.url=jdbc:postgresql://localhost:5432/gym
+spring.datasource.url=jdbc:postgresql://postgres:5433/workload
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.username=postgres
+spring.datasource.username=qudratjonkomilov
 spring.datasource.password=password
 
 # JPA properties
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 
-# all api starts by /fitness
-server.servlet.context-path=/fitness
+# all api starts by /workload
+server.servlet.context-path=/workload
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 
-# JWT properties
-# secret key
-app.jwtSecret=localSecretKey-1234567890-1234567890-1234567890-1234567890-1234567890-1234567890 
-# refresh secret key
-app.jwtRefreshSecret=localSecretKey-1234567890-1234567890-1234567890-1234567890-1234567890-1234567890-16515356
-# 20 days
-app.jwtExpirationInMs=1728000000
-# 100 days
-app.jwtExpirationInMsForRefreshToken=8640000000
 
-
-
-# user block time
-app.userBlockTimeInMs=600000
-# user block count
-app.userBlockCount=3
 # Logging ->> DEBUG OFF TRACE INFO WARN ERROR
 log.value=INFO
 logging.level.root=${log.value}
-logging.level.com.epam.upskill.springcore=${log.value}
+logging.level.com.epam.upskill.workload=${log.value}
 logging.level.ROOT=${log.value}
 logging.level.org.springframework.orm.jpa=${log.value}
 logging.level.org.springframework.transaction=${log.value}
@@ -43,6 +28,13 @@ logging.level.org.hibernate.engine.transaction.internal.TransactionImpl=${log.va
 logging.level.org.springframework.web.bind.annotation.RequestMapping=${log.value}
 logging.level.org.springframework.transaction.interceptor = ${log.value}
 logging.level.io.swagger.models.parameters.AbstractSerializableParameter=${log.value}
+
+spring.application.name=workload
+spring.zipkin.base-url=http://zipkin:9411
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.client.enabled=true
 
 
 
