--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,21 +9,21 @@ services:
     volumes:
       - postgres:/data/postgres
     ports:
-      - "5433:5433"
+      - "5433:5432"
     networks:
       - postgres
     restart: unless-stopped
-#    command: >
-#      bash -c "
-#      while ! pg_isready -q -h localhost -p 5433 -U qudratjonkomilov;
-#      do
-#        echo Waiting for database to start...
-#        sleep 2;
-#      done;
-#      psql -v ON_ERROR_STOP=1 --username qudratjonkomilov --dbname postgres -c 'CREATE DATABASE workload;';
-#      psql -v ON_ERROR_STOP=1 --username qudratjonkomilov --dbname postgres -c 'CREATE DATABASE gym;';
-#      psql -v ON_ERROR_STOP=1 --username qudratjonkomilov --dbname postgres -c 'CREATE DATABASE auth_db;'
-#      "
+    command: >
+      bash -c "
+      while ! pg_isready -q -h localhost -p 5433 -U qudratjonkomilov;
+      do
+        echo Waiting for database to start...
+        sleep 2;
+      done;
+      psql -v ON_ERROR_STOP=1 --username qudratjonkomilov --dbname postgres -c 'CREATE DATABASE workload;';
+      psql -v ON_ERROR_STOP=1 --username qudratjonkomilov --dbname postgres -c 'CREATE DATABASE gym;';
+      psql -v ON_ERROR_STOP=1 --username qudratjonkomilov --dbname postgres -c 'CREATE DATABASE auth_db;'
+      "
   pgadmin:
     container_name: pgadmin
     image: dpage/pgadmin4
@@ -66,7 +66,7 @@ services:
     networks:
       - spring
     depends_on:
-#      - zipkin
+      - zipkin
       - eureka-server
   main-fitness:
     image: qudratjonkomilov/main-fitness:latest
