--- a/main-fitness/pom.xml
+++ b/main-fitness/pom.xml
@@ -59,9 +59,6 @@
             <artifactId>spring-cloud-sleuth-zipkin</artifactId>
         </dependency>
 
-
-
-
         <!--lorem for generation text-->
         <dependency>
             <groupId>com.thedeanda</groupId>
@@ -90,6 +87,10 @@
             <artifactId>feign-clients</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
         </dependency>
 
     </dependencies>
