--- a/workload/pom.xml
+++ b/workload/pom.xml
@@ -76,6 +76,10 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>${spring.swagger.ui}</version>
         </dependency>
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+        </dependency>
 
     </dependencies>
 
