--- a/authentication-service/pom.xml
+++ b/authentication-service/pom.xml
@@ -114,6 +114,13 @@
             <artifactId>commons-lang3</artifactId>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+        </dependency>
+
+
     </dependencies>
 
 
