--- a/main-fitness/src/main/resources/application-default.properties
+++ b/main-fitness/src/main/resources/application-default.properties
@@ -42,6 +42,9 @@ eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 eureka.client.enabled=true
 
+rabbitmq.exchanges.internal=internal.exchange
+rabbitmq.queues.workload=workload.queue
+rabbitmq.routing-keys.internal-workload=internal.workload.routing-key
 
 
 
