--- a/main-fitness/src/main/resources/application-docker.properties
+++ b/main-fitness/src/main/resources/application-docker.properties
@@ -40,3 +40,7 @@ eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 eureka.client.enabled=true
+
+rabbitmq.exchanges.internal=internal.exchange
+rabbitmq.queues.workload=workload.queue
+rabbitmq.routing-keys.internal-workload=internal.workload.routing-key
