--- a/workload/src/main/resources/application-docker.properties
+++ b/workload/src/main/resources/application-docker.properties
@@ -37,7 +37,9 @@ eureka.client.register-with-eureka=true
 eureka.client.enabled=true
 
 
-
+rabbitmq.exchanges.internal=internal.exchange
+rabbitmq.queues.workload=workload.queue
+rabbitmq.routing-keys.internal-workload=internal.workload.routing-key
 
 
 
