--- a/main-fitness/pom.xml
+++ b/main-fitness/pom.xml
@@ -92,6 +92,12 @@
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.epam.upskill</groupId>
+            <artifactId>mq</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
