--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>authentication-service</module>
         <module>main-fitness</module>
         <module>feign-clients</module>
+        <module>mq</module>
     </modules>
 
     <properties>
